# pathtracer_milestone

./: .gitignore  CMakeLists.txt  aabb.h  build_report.py  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  pathtracer_milestone (1).docx  perlin.h  point_light.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere.h  texture.h  vec3.h
.claude/: settings.local.json
.cph/: .test.cpp_1d39cd6f6c59ee687427e01eae7bf906.prob
